@@ -1,16 +1,17 @@
 package com.springproject.beans.validator;
 
 import org.apache.commons.lang.StringUtils;
+import org.springframework.stereotype.Component;
 import org.springframework.validation.Errors;
 import org.springframework.validation.Validator;
 
 import com.springproject.beans.form.CalculatorObject;
 
+@Component
 public class CalculatorValidator implements Validator{
 
 	@Override
 	public boolean supports(Class<?> arg0) {
-		// TODO Auto-generated method stub
 		return false;
 	}
 
@@ -19,13 +20,10 @@ public class CalculatorValidator implements Validator{
 		CalculatorObject co=(CalculatorObject) obj;
 		if(StringUtils.isNotBlank(co.getPrimerop()) && StringUtils.isNotBlank(co.getSegundoop()) && !"-1".equals(co.getOperacion())){
 			boolean isDataInteger=true;
-			int poN=-1;
-			int soN=-1;
-			int opN=-1;
 			try{
-				poN=Integer.parseInt(co.getPrimerop());
-				soN=Integer.valueOf(co.getSegundoop()).intValue();//otra forma de pasar string a int (tipo primitivo)
-				opN=new Integer(co.getOperacion()).intValue();
+				Integer.parseInt(co.getPrimerop());
+				Integer.valueOf(co.getSegundoop()).intValue();//otra forma de pasar string a int (tipo primitivo)
+				new Integer(co.getOperacion()).intValue();
 			}catch(NumberFormatException nfe){
 				isDataInteger=false;
 			}
